[package]
name = "rust-chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
hex = "0.4.3"
rand = "0.8.5"
secp256k1 = { version = "0.28.0", features = ["rand", "global-context", "hashes", "serde"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
